*unreleased*

* Changed capture() helper to not raise an exception on error, but to warn instead [Jeff Forcier]


*2.4.0* June 13, 2008

* Added :normalize_asset_timestamps option to deployment, defaulting to true, which allows asset timestamping to be disabled [John Trupiano]


*2.4.0 Preview Release #1* (2.3.101) June 5, 2008 

* Only make deploy:start, deploy:stop, and deploy:restart try sudo as :runner. The other sudo-enabled tasks (deploy:setup, deploy:cleanup, etc.) will now use the :admin_runner user (which by default is unset). [Jamis Buck]

* Make sure triggers defined as a block inherit the scope of the task they are attached to, instead of the task they were called from [Jamis Buck]

* Make deploy:upload use the upload() helper for more efficient directory processing [Jamis Buck]

* Make deploy:upload accept globs [Mark Imbriaco]

* Make sure the host is reported with the output from scm_run [Jamis Buck]

* Make git SCM honor the :scm_verbose option [Jamis Buck]

* Don't follow symlinks when using :copy_cache [Jamis Buck]

* If :mode is given to upload() helper, do a chmod after to set the mode [Jamis Buck]

* Fix load_from_file method for windows users [Neil Wilson]

* Display a deprecation error if a remote git branch is specified [Tim Harper]

* Fix deployment recipes to use the updated sudo helper [Jamis Buck]

* Enhance the sudo helper so it can be used to return the command, instead of executing it [Jamis Buck]

* Revert "make sudo helper play nicely with complex command chains", since it broke stuff [Jamis Buck]

* Make set(:default_shell, false) work for not using a shell on a per-command basis [Ryan McGeary] 

* Improved test coverage [Ryan McGeary]

* Fixed "coverage" take task [Ryan McGeary]

* Use upload() instead of put() with the copy strategy [Jamis Buck]

* Revert the "git fetch --tags" change, since it didn't work as expected [Jamis Buck]

* Fix deploy:pending when using git SCM [Ryan McGeary]
